# pdf-ocr

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  agrovoc_fixture.ttl  capabilities.ipynb  contract_semantics.ipynb  pipeline.ipynb  pyproject.toml  walkthrough.ipynb  walkthrough_docx.ipynb  walkthrough_docx_legacy.ipynb  walkthrough_legacy.ipynb  xlsx_extraction.ipynb
.claude/: settings.local.json
.claude/plans/: au-shipping-stem-fixes.md
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  compress.baml  interpret.baml  report_date.baml  resume.baml  types.baml
contracts/: acea_car_registrations.json  acea_car_registrations.yaml  au_shipping_stem.json  au_shipping_stem.yaml  ru_ag_ministry.json  ru_ag_ministry.jsonld  ru_ag_ministry.yaml
docs/: semantic-contracts-vision.md
inputs/docx/input/: 2025-04-24_08-44-01.Russian weekly grain Apr 21-22 2025-1.docx  (+4 more)
pubs/: frankenstein-table.html  ru-docx-table-systems.md  the-data-humans-make.md  where-the-line-is.md
src/docpact/: CLASSIFY.md  COMPRESS.md  CONTRACTS.md  DOCX_EXTRACTOR.md  FILTER.md  HEURISTICS.md  HTML_EXTRACTOR.md  INTERPRET.md  NORMALIZE.md  PDF_EXTRACTOR.md  PIPELINE.md  PPTX_EXTRACTOR.md  README.md  REPORT_DATE.md  RETRIEVAL.md  SEMANTICS.md  SERIALIZE.md  SPATIAL_TEXT.md  UNPIVOT.md  XLSX_EXTRACTOR.md  __init__.py  classify.py  compress.py  contracts.py  docx_extractor.py  filter.py  heuristics.py  html_extractor.py  interpret.py  normalize.py  pdf_extractor.py  pipeline.py  pptx_extractor.py  retrieval.py  semantics.py  serialize.py  unpivot.py  xlsx_extractor.py
src/pdf_ocr/: COMPRESS.md  DOCX_EXTRACTOR.md  FILTER.md  INTERPRET.md  README.md  SERIALIZE.md  SPATIAL_TEXT.md  __init__.py  classify.py  compress.py  contracts.py  docx_extractor.py  filter.py  heuristics.py  html_extractor.py  interpret.py  pipeline.py  pptx_extractor.py  report_date.py  retrieval.py  serialize.py  spatial_text.py  xlsx_extractor.py
tests/: generate_synthetic_docx.py  generate_synthetic_xlsx.py  test_classify.py  test_contracts.py  test_deterministic.py  test_docx_extractor.py  test_header_separator.py  test_interpret.py  test_normalize.py  test_pipeline.py  test_pipeline_semantic.py  test_semantic_integration.py  test_semantics.py  test_serialize_coerce.py  test_table_runs.py  test_unpivot.py  test_xlsx_extractor.py
tools/contract-semantics/: pyproject.toml
tools/contract-semantics/shapes/: harvest_output.ttl  vessels_output.ttl
tools/contract-semantics/src/contract_semantics/: AGROVOC.md  ANALYZE.md  CLI.md  COMPILE.md  CONTEXT.md  DIFF.md  GEONAMES.md  MATERIALIZE.md  MODELS.md  README.md  RECOMMEND.md  RESOLVE.md  VALIDATE.md  __init__.py  agrovoc.py  analyze.py  cli.py  compile.py  context.py  diff.py  geonames.py  materialize.py  models.py  recommend.py  resolve.py  validate.py
tools/contract-semantics/tests/: conftest.py  test_acceptance.py  test_agrovoc.py  test_analyze.py  test_compile.py  test_context.py  test_diff.py  test_geonames.py  test_materialize.py  test_recommend.py  test_resolve.py  test_validate.py
(+31 files in other folders)
