[project]
name = "contract-semantics"
version = "0.1.0"
description = "Ontology-grounded contract authoring and validation toolkit for docpact"
requires-python = ">=3.13"
dependencies = [
    "rdflib>=7.0,<8",
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
shacl = ["pyshacl>=0.26"]
analyze = ["docpact"]
dev = ["pytest>=8.0"]

[tool.uv.sources]
docpact = { path = "../../" }

[project.scripts]
contract-semantics = "contract_semantics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contract_semantics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
